# generative-data

./: .gitignore  README.md  download_models.sh  pyproject.toml
scripts/: crop_person.py
src/ds_gen/: __init__.py  crop_persons.py  person_finder.py
