[project]
name = "custom_sd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Andrey Ledovskoy", email = "montegoled@gmail.com"},
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "imgaug>=0.4.0",
    "ultralytics>=8.3.27",
    "loguru>=0.7.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
