[project]
name = "generative-data"
version = "0.1.0"
description = "Data generation project"
authors = [
    {name = "Andrey Ledovskoy", email = "montegoled@gmail.com"},
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "imgaug>=0.4.0",
    "ultralytics>=8.3.27",
    "loguru>=0.7.2",
    "dill>=0.3.9",
    "pydantic>=2.9.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true